--- a/Notes/Week2/week2.tex
+++ b/Notes/Week2/week2.tex
@@ -564,6 +564,8 @@
                 \caption{Losing a methyl radical.}
                 \label{fig:resonanceFragBenzeneAlkylb}
             \end{subfigure}
+            \setchemfig{autoreset cntcycle=true}
+            \chemfig{}
             \caption{Resonance fragmentation: Alkyl-substituted benzene rings.}
             \label{fig:resonanceFragBenzeneAlkyl}
         \end{figure}
