--- a/Notes/Week3/week3.tex
+++ b/Notes/Week3/week3.tex
@@ -793,7 +793,7 @@
     \begin{itemize}
         \item If both reactants are substituted and we draw their resonance states (see Figures \ref{fig:dielsAlderEDG} and \ref{fig:dielsAlderEWG}), we'd like to unite the carbon that is negative and the carbon that is positive.
         \item This resonance analysis is not really what happens (all electrons move at once as in Figure \ref{fig:mechanismDielsAlder}), but it is quite predictive.
-        \item Note that we can have a diene with an EDG at one end, a diene with an EDG in the interior, or a diene with para EDGs (a so-called \textbf{synergistic eiene} because both EDGs push electrons toward the carbon at the end adjacent to the interior EDG).
+        \item Note that we can have a diene with an EDG at one end, a diene with an EDG in the interior, or a diene with meta EDGs (a so-called \textbf{synergistic eiene} because both EDGs push electrons toward the carbon at the end adjacent to the interior EDG).
     \end{itemize}
     \item Does a number of examples.
     \item When facing a Diels-Alder question on a PSet or test, your first question to ask is "are my reactants appropriate for the Diels-Alder reaction?"
@@ -831,15 +831,15 @@
         \centering
         \footnotesize
         \schemestart
-            \chemname[2em]{\chemfig{-[:30](-[2])-[:-30]}}{Isobutane\\}
-            \arrow(.43--.173){->[\ce{Cl2}][$h\nu$]}
-            \chemname[2em]{\chemfig{-[:30](-[2])-[:-30]-[:30]Cl}}{Isobutyl chloride\\(48\%)}
+            \chemname{\chemfig{-[:30](-[2])-[:-30]}}{Isobutane\\}
+            \arrow(.20--.180){->[\ce{Cl2}][$h\nu$]}
+            \chemname{\chemfig{-[:30](-[2])-[:-30]-[:30]Cl}}{Isobutyl chloride\\(48\%)}
             \+{2em,2em,1.3em}
-            \chemname[2em]{\chemfig{-[:30](-[:70]Cl)(-[:110])-[:-30]}}{$t$-Butyl chloride\\(29\%)}
+            \chemname{\chemfig{-[:30](-[:70]Cl)(-[:110])-[:-30]}}{$t$-Butyl chloride\\(29\%)}
             \+
-            \chemname[2em]{\shortstack{Polychlorinated\\products}}{{\color{white}hi}\\(23\%)}
+            \chemname{\shortstack{Polychlorinated\\products}}{{\color{white}hi}\\(23\%)}
             \+
-            \chemname[2em]{\shortstack{HCl\\{\color{white}hi}}}{{\color{white}hi}\\{\color{white}hi}}
+            \chemname{\shortstack{HCl\\{\color{white}hi}}}{{\color{white}hi}\\{\color{white}hi}}
         \schemestop
         \caption{Unselectivity of chlorination of alkanes.}
         \label{fig:chlorinationUnselective}
