--- a/preamble.tex
+++ b/preamble.tex
@@ -47,6 +47,7 @@
 \colorlet{grx}{green!60!cyan}
 
 \sisetup{range-phrase=-,range-units=single}
+\DeclareSIUnit{\angstrom}{\textup{\AA}}
 \DeclareSIUnit{\calorie}{cal}
 \DeclareSIUnit{\atomicmassunit}{amu}
 
